[package]
name = "wasm_hosting_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
bevy = "0.6"
mlua = { version = "0.7.4", features = ["luajit", "vendored", "send"] }
paste = "1.0.7"
rayon = "1.5.1"